--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+
+
+
+/* header {
+    transform: translateZ(100px);
+} */
